crates/solidity/testing/snapshots/bindings_output/contracts/public_getter_selector/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[ input.sol:6:17 ]
   │
 6 │     uint public override x;
   │                 ─────┬────  
   │                      ╰────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ interface Face {
   │           ──┬─  
   │             ╰─── name: 1
 2 │     function x() external view returns (uint);
   │              ┬  
   │              ╰── name: 2
   │ 
 5 │ contract Test is Face {
   │          ──┬─  
   │            ╰─── name: 3
   │ 
 8 │     function test() internal {
   │              ──┬─  
   │                ╰─── name: 4
   │
   ├─[ input.sol:1:1 ]
   │
 5 │ contract Test is Face {
   │                  ──┬─  
   │                    ╰─── ref: 1
   │ 
 9 │         this.x.selector;
   │              ┬ ────┬───  
   │              ╰─────────── ref: 2
   │                    │     
   │                    ╰───── ref: built-in
───╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ interface Face {
    ┆ ┆   
  3 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         function x() external view returns (uint);
    │     ───────────────────────┬───────────────────────  
    │                            ╰───────────────────────── definiens: 2
    │ 
  4 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 3
    │
    ├─[ input.sol:1:1 ]
    │
  7 │ ╭─▶ 
    ┆ ┆   
 10 │ ├─▶     }
    │ │           
    │ ╰─────────── definiens: 4
────╯
